feat: add admin invite request API (#39)
* docs: plan U31-C2 invitation administration

* feat: add admin invite code API

* feat: add admin invite request API
